UPDATE Initialize project structure with a new database and a comprehensive frontend application, including customer management.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -208,138 +208,11 @@
     <!-- Modal Container -->
     <div id="modal-container"></div>
 
-    <!-- Scripts -->
-    <script src="js/api.js"></script>
-    <script src="js/utils.js"></script>
-    <script src="js/auth.js"></script>
-    <script src="js/components/sidebar.js"></script>
-    <script src="js/components/header.js"></script>
-    <script src="js/layout-loader.js"></script>
-    <script>
-        // Auth check
-        document.addEventListener('DOMContentLoaded', function () {
-            if (!API.getToken()) {
-                window.location.href = 'pages/login.html';
-                return;
-            }
-            loadDashboardData();
-        });
+    <!-- Toast Container -->
+    <div id="toast-container"></div>
 
-
-        async function loadDashboardData() {
-            try {
-                // Load customers count
-                const customers = await API.get('/customers');
-                document.getElementById('stat-customers').textContent = customers.length;
-
-                // Load opportunities
-                const opportunities = await API.get('/opportunities');
-                const activeOpps = opportunities.filter(o => !['WON', 'LOST'].includes(o.status));
-                document.getElementById('stat-opportunities').textContent = activeOpps.length;
-
-                // Calculate expected revenue
-                const totalRevenue = activeOpps.reduce((sum, o) => sum + (o.expected_revenue || 0), 0);
-                document.getElementById('stat-revenue').textContent = Utils.formatCurrency(totalRevenue, 'TRY');
-
-                // Load projects
-                const projects = await API.get('/projects');
-                const activeProjects = projects.filter(p => !['COMPLETED', 'INVOICED'].includes(p.status));
-                document.getElementById('stat-projects').textContent = activeProjects.length;
-
-                // Render recent opportunities
-                renderRecentOpportunities(opportunities.slice(0, 5));
-
-            } catch (error) {
-                console.error('Failed to load dashboard data:', error);
-                document.getElementById('stat-customers').textContent = '0';
-                document.getElementById('stat-opportunities').textContent = '0';
-                document.getElementById('stat-projects').textContent = '0';
-                document.getElementById('stat-revenue').textContent = '₺0';
-                document.getElementById('recent-opportunities').innerHTML = `
-                    <div style="padding: var(--spacing-lg); text-align: center; color: var(--text-muted);">
-                        Veri yüklenemedi
-                    </div>
-                `;
-            }
-        }
-
-        const statusLabels = {
-            'NEW': 'Yeni',
-            'CONTACTED': 'İletişime Geçildi',
-            'QUALIFIED': 'Nitelikli',
-            'PROPOSAL': 'Teklif Verildi',
-            'NEGOTIATION': 'Müzakere',
-            'WON': 'Kazanıldı',
-            'LOST': 'Kaybedildi'
-        };
-
-        const statusColors = {
-            'NEW': 'info',
-            'CONTACTED': 'info',
-            'QUALIFIED': 'warning',
-            'PROPOSAL': 'warning',
-            'NEGOTIATION': 'warning',
-            'WON': 'success',
-            'LOST': 'danger'
-        };
-
-        function renderRecentOpportunities(opportunities) {
-            const container = document.getElementById('recent-opportunities');
-
-            if (opportunities.length === 0) {
-                container.innerHTML = `
-                    <div style="padding: var(--spacing-lg); text-align: center; color: var(--text-muted);">
-                        Henüz fırsat yok
-                    </div>
-                `;
-                return;
-            }
-
-            container.innerHTML = `
-                <table class="data-table">
-                    <thead>
-                        <tr>
-                            <th>Fırsat</th>
-                            <th>Müşteri</th>
-                            <th>Değer</th>
-                            <th>Durum</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        ${opportunities.map(opp => `
-                            <tr>
-                                <td><strong>${opp.title}</strong></td>
-                                <td>${opp.customer_name || '-'}</td>
-                                <td>${opp.expected_revenue ? Utils.formatCurrency(opp.expected_revenue, opp.currency) : '-'}</td>
-                                <td>
-                                    <span class="status-badge ${statusColors[opp.status] || 'info'}">
-                                        ${statusLabels[opp.status] || opp.status}
-                                    </span>
-                                </td>
-                            </tr>
-                        `).join('')}
-                    </tbody>
-                </table>
-            `;
-        }
-
-        // Mobile sidebar toggle
-        function toggleSidebar() {
-            document.getElementById('sidebar').classList.toggle('show');
-            document.querySelector('.sidebar-overlay').classList.toggle('show');
-        }
-
-        function closeSidebar() {
-            document.getElementById('sidebar').classList.remove('show');
-            document.querySelector('.sidebar-overlay').classList.remove('show');
-        }
-
-        // Modal helpers
-        function closeModal(event) {
-            if (event && event.target !== event.currentTarget) return;
-            document.getElementById('modal-container').innerHTML = '';
-        }
-    </script>
+    <!-- ES Module Script -->
+    <script type="module" src="js/pages/dashboard.js"></script>
 </body>
 
 </html>
