--- a/frontend/pages/customers.html
+++ b/frontend/pages/customers.html
@@ -83,259 +83,11 @@
     <!-- Modal Container -->
     <div id="modal-container"></div>
 
-    <!-- Scripts -->
-    <script src="../js/api.js"></script>
-    <script src="../js/utils.js"></script>
-    <script src="../js/auth.js"></script>
-    <script src="../js/components/sidebar.js"></script>
-    <script src="../js/components/header.js"></script>
-    <script src="../js/layout-loader.js"></script>
-    <script>
-        let customers = [];
+    <!-- Toast Container -->
+    <div id="toast-container"></div>
 
-        // Check auth on load
-        document.addEventListener('DOMContentLoaded', function () {
-            if (!API.getToken()) {
-                window.location.href = 'login.html';
-                return;
-            }
-            loadCustomers();
-        });
-
-
-
-        async function loadCustomers() {
-            const container = document.getElementById('table-container');
-
-            try {
-                const search = document.getElementById('search-input').value;
-                const statusFilter = document.getElementById('status-filter').value;
-
-                let params = {};
-                if (search) params.search = search;
-                if (statusFilter) params.is_active = statusFilter;
-
-                customers = await API.get('/customers', params);
-                renderTable(customers);
-            } catch (error) {
-                container.innerHTML = `
-                    <div class="empty-state">
-                        <div class="empty-state-icon">⚠️</div>
-                        <div class="empty-state-title">Yüklenemedi</div>
-                        <div class="empty-state-message">${error.message}</div>
-                    </div>
-                `;
-            }
-        }
-
-        function renderTable(data) {
-            const container = document.getElementById('table-container');
-
-            if (data.length === 0) {
-                container.innerHTML = `
-                    <div class="empty-state">
-                        <div class="empty-state-icon">👥</div>
-                        <div class="empty-state-title">Henüz müşteri yok</div>
-                        <div class="empty-state-message">Yeni müşteri ekleyerek başlayın</div>
-                        <button class="btn btn-primary" style="margin-top: var(--spacing-md);" onclick="openCreateModal()">
-                            Yeni Müşteri Ekle
-                        </button>
-                    </div>
-                `;
-                return;
-            }
-
-            container.innerHTML = `
-                <table class="data-table">
-                    <thead>
-                        <tr>
-                            <th>Müşteri Adı</th>
-                            <th>E-posta</th>
-                            <th>Telefon</th>
-                            <th>Şehir</th>
-                            <th>Durum</th>
-                            <th style="text-align: right;">İşlemler</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        ${data.map(customer => `
-                            <tr>
-                                <td>
-                                    <div style="display: flex; align-items: center; gap: var(--spacing-sm);">
-                                        <div class="avatar avatar-sm">${customer.name.charAt(0)}</div>
-                                        <div>
-                                            <strong>${customer.name}</strong>
-                                            ${customer.contact_person ? `<div style="font-size: var(--font-size-xs); color: var(--text-muted);">${customer.contact_person}</div>` : ''}
-                                        </div>
-                                    </div>
-                                </td>
-                                <td>${customer.email || '-'}</td>
-                                <td>${customer.phone || '-'}</td>
-                                <td>${customer.city || '-'}</td>
-                                <td>
-                                    <span class="status-badge ${customer.is_active ? 'success' : 'danger'}">
-                                        ${customer.is_active ? 'Aktif' : 'Pasif'}
-                                    </span>
-                                </td>
-                                <td style="text-align: right;">
-                                    <button class="btn btn-ghost btn-sm" onclick="editCustomer(${customer.id})">Düzenle</button>
-                                </td>
-                            </tr>
-                        `).join('')}
-                    </tbody>
-                </table>
-            `;
-        }
-
-        function openCreateModal() {
-            document.body.style.overflow = 'hidden';
-            document.getElementById('modal-container').innerHTML = `
-                <div class="modal-overlay show" onclick="closeModal(event)">
-                    <div class="modal-content" onclick="event.stopPropagation()" style="max-width: 500px;">
-                        <div class="modal-header">
-                            <h3>Yeni Müşteri</h3>
-                            <button class="modal-close" onclick="closeModal()">&times;</button>
-                        </div>
-                        <form onsubmit="createCustomer(event)">
-                            <div class="modal-body">
-                                <div class="form-group">
-                                    <label class="form-label required">Müşteri Adı</label>
-                                    <input type="text" class="form-input" name="name" required>
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">E-posta</label>
-                                    <input type="email" class="form-input" name="email">
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Telefon</label>
-                                    <input type="text" class="form-input" name="phone">
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Yetkili Kişi</label>
-                                    <input type="text" class="form-input" name="contact_person">
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Şehir</label>
-                                    <input type="text" class="form-input" name="city">
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Vergi No</label>
-                                    <input type="text" class="form-input" name="tax_id">
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-ghost" onclick="closeModal()">İptal</button>
-                                <button type="submit" class="btn btn-primary">Kaydet</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            `;
-        }
-
-        function closeModal(event) {
-            if (event && event.target !== event.currentTarget) return;
-            document.getElementById('modal-container').innerHTML = '';
-            document.body.style.overflow = '';
-        }
-
-        async function createCustomer(event) {
-            event.preventDefault();
-            const form = event.target;
-            const formData = new FormData(form);
-
-            const data = {};
-            formData.forEach((value, key) => {
-                if (value) data[key] = value;
-            });
-
-            try {
-                await API.post('/customers', data);
-                closeModal();
-                alert('Müşteri başarıyla oluşturuldu');
-                loadCustomers();
-            } catch (error) {
-                alert(error.message || 'Bir hata oluştu');
-            }
-        }
-
-        function editCustomer(id) {
-            const customer = customers.find(c => c.id === id);
-            if (!customer) return;
-
-            document.body.style.overflow = 'hidden';
-            document.getElementById('modal-container').innerHTML = `
-                <div class="modal-overlay show" onclick="closeModal(event)">
-                    <div class="modal-content" onclick="event.stopPropagation()" style="max-width: 500px;">
-                        <div class="modal-header">
-                            <h3>Müşteri Düzenle</h3>
-                            <button class="modal-close" onclick="closeModal()">&times;</button>
-                        </div>
-                        <form onsubmit="updateCustomer(event, ${id})">
-                            <div class="modal-body">
-                                <div class="form-group">
-                                    <label class="form-label required">Müşteri Adı</label>
-                                    <input type="text" class="form-input" name="name" value="${customer.name}" required>
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">E-posta</label>
-                                    <input type="email" class="form-input" name="email" value="${customer.email || ''}">
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Telefon</label>
-                                    <input type="text" class="form-input" name="phone" value="${customer.phone || ''}">
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Şehir</label>
-                                    <input type="text" class="form-input" name="city" value="${customer.city || ''}">
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Durum</label>
-                                    <select class="form-select" name="is_active">
-                                        <option value="true" ${customer.is_active ? 'selected' : ''}>Aktif</option>
-                                        <option value="false" ${!customer.is_active ? 'selected' : ''}>Pasif</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-ghost" onclick="closeModal()">İptal</button>
-                                <button type="submit" class="btn btn-primary">Güncelle</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            `;
-        }
-
-        async function updateCustomer(event, id) {
-            event.preventDefault();
-            const form = event.target;
-            const formData = new FormData(form);
-
-            const data = {};
-            formData.forEach((value, key) => {
-                if (key === 'is_active') {
-                    data[key] = value === 'true';
-                } else if (value) {
-                    data[key] = value;
-                }
-            });
-
-            try {
-                await API.put(`/customers/${id}`, data);
-                closeModal();
-                alert('Müşteri güncellendi');
-                loadCustomers();
-            } catch (error) {
-                alert(error.message || 'Bir hata oluştu');
-            }
-        }
-
-        // Enter key search
-        document.getElementById('search-input').addEventListener('keypress', function (e) {
-            if (e.key === 'Enter') loadCustomers();
-        });
-    </script>
+    <!-- ES Module Script -->
+    <script type="module" src="../js/pages/customers.js"></script>
 </body>
 
 </html>
