--- a/frontend/pages/opportunities.html
+++ b/frontend/pages/opportunities.html
@@ -84,340 +84,11 @@
     <!-- Modal Container -->
     <div id="modal-container"></div>
 
-    <!-- Scripts -->
-    <script src="../js/api.js"></script>
-    <script src="../js/utils.js"></script>
-    <script src="../js/auth.js"></script>
-    <script src="../js/components/sidebar.js"></script>
-    <script src="../js/components/header.js"></script>
-    <script src="../js/layout-loader.js"></script>
-    <script>
-        let opportunities = [];
-        let customers = [];
+    <!-- Toast Container -->
+    <div id="toast-container"></div>
 
-        const statusLabels = {
-            'NEW': 'Yeni',
-            'CONTACTED': 'İletişime Geçildi',
-            'QUALIFIED': 'Nitelikli',
-            'PROPOSAL': 'Teklif Verildi',
-            'NEGOTIATION': 'Müzakere',
-            'WON': 'Kazanıldı',
-            'LOST': 'Kaybedildi'
-        };
-
-        const statusColors = {
-            'NEW': 'info',
-            'CONTACTED': 'info',
-            'QUALIFIED': 'warning',
-            'PROPOSAL': 'warning',
-            'NEGOTIATION': 'warning',
-            'WON': 'success',
-            'LOST': 'danger'
-        };
-
-        document.addEventListener('DOMContentLoaded', function () {
-            if (!API.getToken()) {
-                window.location.href = 'login.html';
-                return;
-            }
-            loadCustomers();
-            loadOpportunities();
-        });
-
-
-        async function loadCustomers() {
-            try {
-                customers = await API.get('/customers');
-            } catch (error) {
-                console.error('Failed to load customers:', error);
-            }
-        }
-
-        async function loadOpportunities() {
-            const container = document.getElementById('table-container');
-
-            try {
-                const statusFilter = document.getElementById('status-filter').value;
-                let params = {};
-                if (statusFilter) params.status = statusFilter;
-
-                opportunities = await API.get('/opportunities', params);
-                renderTable(opportunities);
-            } catch (error) {
-                container.innerHTML = `
-                    <div class="empty-state">
-                        <div class="empty-state-icon">⚠️</div>
-                        <div class="empty-state-title">Yüklenemedi</div>
-                        <div class="empty-state-message">${error.message}</div>
-                    </div>
-                `;
-            }
-        }
-
-        function renderTable(data) {
-            const container = document.getElementById('table-container');
-
-            if (data.length === 0) {
-                container.innerHTML = `
-                    <div class="empty-state">
-                        <div class="empty-state-icon">⭐</div>
-                        <div class="empty-state-title">Henüz fırsat yok</div>
-                        <div class="empty-state-message">Yeni fırsat ekleyerek başlayın</div>
-                        <button class="btn btn-primary" style="margin-top: var(--spacing-md);" onclick="openCreateModal()">
-                            Yeni Fırsat Ekle
-                        </button>
-                    </div>
-                `;
-                return;
-            }
-
-            container.innerHTML = `
-                <table class="data-table">
-                    <thead>
-                        <tr>
-                            <th>Fırsat</th>
-                            <th>Müşteri</th>
-                            <th>Beklenen Gelir</th>
-                            <th>Olasılık</th>
-                            <th>Durum</th>
-                            <th style="text-align: right;">İşlemler</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        ${data.map(opp => `
-                            <tr>
-                                <td>
-                                    <strong>${opp.title}</strong>
-                                    ${opp.description ? `<div style="font-size: var(--font-size-xs); color: var(--text-muted);">${opp.description.substring(0, 40)}...</div>` : ''}
-                                </td>
-                                <td>${opp.customer_name || '-'}</td>
-                                <td>${opp.expected_revenue ? Utils.formatCurrency(opp.expected_revenue, opp.currency) : '-'}</td>
-                                <td>
-                                    <div style="display: flex; align-items: center; gap: var(--spacing-xs);">
-                                        <div style="flex: 1; height: 6px; background: var(--gray-200); border-radius: 3px; max-width: 60px;">
-                                            <div style="width: ${opp.probability}%; height: 100%; background: var(--secondary); border-radius: 3px;"></div>
-                                        </div>
-                                        <span style="font-size: var(--font-size-xs);">${opp.probability}%</span>
-                                    </div>
-                                </td>
-                                <td>
-                                    <span class="status-badge ${statusColors[opp.status] || 'info'}">
-                                        ${statusLabels[opp.status] || opp.status}
-                                    </span>
-                                </td>
-                                <td style="text-align: right;">
-                                    ${opp.status !== 'WON' && opp.status !== 'LOST' ? `
-                                        <button class="btn btn-success btn-sm" onclick="markWon(${opp.id})" title="Kazanıldı">✓</button>
-                                        <button class="btn btn-danger btn-sm" onclick="markLost(${opp.id})" title="Kaybedildi">✗</button>
-                                    ` : ''}
-                                    <button class="btn btn-ghost btn-sm" onclick="editOpportunity(${opp.id})">Düzenle</button>
-                                </td>
-                            </tr>
-                        `).join('')}
-                    </tbody>
-                </table>
-            `;
-        }
-
-        function openCreateModal() {
-            document.body.style.overflow = 'hidden';
-            document.getElementById('modal-container').innerHTML = `
-                <div class="modal-overlay show" onclick="closeModal(event)">
-                    <div class="modal-content" onclick="event.stopPropagation()" style="max-width: 500px;">
-                        <div class="modal-header">
-                            <h3>Yeni Fırsat</h3>
-                            <button class="modal-close" onclick="closeModal()">&times;</button>
-                        </div>
-                        <form onsubmit="createOpportunity(event)">
-                            <div class="modal-body">
-                                <div class="form-group">
-                                    <label class="form-label required">Fırsat Adı</label>
-                                    <input type="text" class="form-input" name="title" required>
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label required">Müşteri</label>
-                                    <select class="form-select" name="customer_id" required>
-                                        <option value="">Müşteri seçin</option>
-                                        ${customers.map(c => `<option value="${c.id}">${c.name}</option>`).join('')}
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Beklenen Gelir</label>
-                                    <input type="number" class="form-input" name="expected_revenue" step="0.01">
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Para Birimi</label>
-                                    <select class="form-select" name="currency">
-                                        <option value="TRY">TRY</option>
-                                        <option value="USD">USD</option>
-                                        <option value="EUR">EUR</option>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Olasılık (%)</label>
-                                    <input type="number" class="form-input" name="probability" min="0" max="100" value="50">
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Açıklama</label>
-                                    <textarea class="form-textarea" name="description" rows="2"></textarea>
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-ghost" onclick="closeModal()">İptal</button>
-                                <button type="submit" class="btn btn-primary">Kaydet</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            `;
-        }
-
-        function closeModal(event) {
-            if (event && event.target !== event.currentTarget) return;
-            document.getElementById('modal-container').innerHTML = '';
-        }
-
-        async function createOpportunity(event) {
-            event.preventDefault();
-            const form = event.target;
-            const formData = new FormData(form);
-
-            const data = {};
-            formData.forEach((value, key) => {
-                if (value) {
-                    if (key === 'customer_id' || key === 'probability') {
-                        data[key] = parseInt(value);
-                    } else if (key === 'expected_revenue') {
-                        data[key] = parseFloat(value);
-                    } else {
-                        data[key] = value;
-                    }
-                }
-            });
-
-            try {
-                await API.post('/opportunities', data);
-                closeModal();
-                alert('Fırsat oluşturuldu');
-                loadOpportunities();
-            } catch (error) {
-                alert(error.message || 'Bir hata oluştu');
-            }
-        }
-
-        async function markWon(id) {
-            if (!confirm('Bu fırsatı "Kazanıldı" olarak işaretlemek istiyor musunuz? Otomatik proje oluşturulacak.')) return;
-
-            try {
-                const project = await API.post(`/opportunities/${id}/won`);
-                alert(`Tebrikler! Proje oluşturuldu: ${project.project_code}`);
-                loadOpportunities();
-            } catch (error) {
-                alert(error.message || 'Bir hata oluştu');
-            }
-        }
-
-        async function markLost(id) {
-            if (!confirm('Bu fırsatı "Kaybedildi" olarak işaretlemek istiyor musunuz?')) return;
-
-            try {
-                await API.post(`/opportunities/${id}/lost`);
-                alert('Fırsat kaybedildi olarak işaretlendi');
-                loadOpportunities();
-            } catch (error) {
-                alert(error.message || 'Bir hata oluştu');
-            }
-        }
-
-        function editOpportunity(id) {
-            const opp = opportunities.find(o => o.id === id);
-            if (!opp) return;
-
-            document.body.style.overflow = 'hidden';
-            document.getElementById('modal-container').innerHTML = `
-                <div class="modal-overlay show" onclick="closeModal(event)">
-                    <div class="modal-content" onclick="event.stopPropagation()" style="max-width: 500px;">
-                        <div class="modal-header">
-                            <h3>Fırsat Düzenle</h3>
-                            <button class="modal-close" onclick="closeModal()">&times;</button>
-                        </div>
-                        <form onsubmit="updateOpportunity(event, ${id})">
-                            <div class="modal-body">
-                                <div class="form-group">
-                                    <label class="form-label required">Fırsat Adı</label>
-                                    <input type="text" class="form-input" name="title" value="${opp.title}" required>
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Beklenen Gelir</label>
-                                    <input type="number" class="form-input" name="expected_revenue" value="${opp.expected_revenue || ''}" step="0.01">
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Durum</label>
-                                    <select class="form-select" name="status" ${opp.status === 'WON' || opp.status === 'LOST' ? 'disabled' : ''}>
-                                        ${Object.entries(statusLabels)
-                    .filter(([key]) => key !== 'WON' && key !== 'LOST')
-                    .map(([key, label]) =>
-                        `<option value="${key}" ${opp.status === key ? 'selected' : ''}>${label}</option>`
-                    ).join('')}
-                                    </select>
-                                    ${opp.status === 'WON' || opp.status === 'LOST' ?
-                    `<small style="color: var(--text-muted); margin-top: 4px; display: block;">
-                                            ⚠️ Kazanıldı/Kaybedildi durumları değiştirilemez
-                                        </small>` :
-                    `<small style="color: var(--text-muted); margin-top: 4px; display: block;">
-                                            💡 Kazanıldı/Kaybedildi için tablodaki özel butonları kullanın
-                                        </small>`
-                }
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Olasılık (%)</label>
-                                    <input type="number" class="form-input" name="probability" min="0" max="100" value="${opp.probability}">
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-ghost" onclick="closeModal()">İptal</button>
-                                <button type="submit" class="btn btn-primary">Güncelle</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            `;
-        }
-
-        async function updateOpportunity(event, id) {
-            event.preventDefault();
-            const form = event.target;
-            const formData = new FormData(form);
-
-            const data = {};
-            formData.forEach((value, key) => {
-                if (value) {
-                    if (key === 'probability') {
-                        data[key] = parseInt(value);
-                    } else if (key === 'expected_revenue') {
-                        data[key] = parseFloat(value);
-                    } else {
-                        data[key] = value;
-                    }
-                }
-            });
-
-            try {
-                await API.put(`/opportunities/${id}`, data);
-                closeModal();
-                alert('Fırsat güncellendi');
-                loadOpportunities();
-            } catch (error) {
-                alert(error.message || 'Bir hata oluştu');
-            }
-        }
-
-        function closeModal(event) {
-            if (event && event.target !== event.currentTarget) return;
-            document.getElementById('modal-container').innerHTML = '';
-            document.body.style.overflow = '';
-        }
-    </script>
+    <!-- ES Module Script -->
+    <script type="module" src="../js/pages/opportunities.js"></script>
 </body>
 
 </html>
