--- a/frontend/pages/projects.html
+++ b/frontend/pages/projects.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PROJELER - Otomasyon CRM</title>
+    <title>Projeler - Otomasyon CRM</title>
 
     <!-- CSS Files -->
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
@@ -81,250 +81,11 @@
     <!-- Modal Container -->
     <div id="modal-container"></div>
 
-    <!-- Scripts -->
-    <script src="../js/api.js"></script>
-    <script src="../js/utils.js"></script>
-    <script src="../js/auth.js"></script>
-    <script src="../js/components/sidebar.js"></script>
-    <script src="../js/components/header.js"></script>
-    <script src="../js/layout-loader.js"></script>
-    <script>
-        let projects = [];
+    <!-- Toast Container -->
+    <div id="toast-container"></div>
 
-        const statusLabels = {
-            'OPPORTUNITY': 'Fırsat',
-            'WON': 'Kazanıldı',
-            'ENGINEERING': 'Mühendislik',
-            'PROCUREMENT': 'Tedarik',
-            'ASSEMBLY': 'Montaj',
-            'TESTING': 'Test',
-            'SHIPPING': 'Sevkiyat',
-            'COMMISSIONING': 'Devreye Alma',
-            'COMPLETED': 'Tamamlandı',
-            'INVOICED': 'Faturalandı'
-        };
-
-        const statusColors = {
-            'OPPORTUNITY': 'info',
-            'WON': 'success',
-            'ENGINEERING': 'warning',
-            'PROCUREMENT': 'warning',
-            'ASSEMBLY': 'warning',
-            'TESTING': 'warning',
-            'SHIPPING': 'info',
-            'COMMISSIONING': 'info',
-            'COMPLETED': 'success',
-            'INVOICED': 'success'
-        };
-
-        const statusOrder = ['OPPORTUNITY', 'WON', 'ENGINEERING', 'PROCUREMENT', 'ASSEMBLY', 'TESTING', 'SHIPPING', 'COMMISSIONING', 'COMPLETED', 'INVOICED'];
-
-        document.addEventListener('DOMContentLoaded', function () {
-            if (!API.getToken()) {
-                window.location.href = 'login.html';
-                return;
-            }
-            loadProjects();
-        });
-
-
-        async function loadProjects() {
-            const container = document.getElementById('table-container');
-
-            try {
-                const search = document.getElementById('search-input').value;
-                const statusFilter = document.getElementById('status-filter').value;
-
-                let params = {};
-                if (search) params.search = search;
-                if (statusFilter) params.status = statusFilter;
-
-                projects = await API.get('/projects', params);
-                renderTable(projects);
-            } catch (error) {
-                container.innerHTML = `
-                    <div class="empty-state">
-                        <div class="empty-state-icon">⚠️</div>
-                        <div class="empty-state-title">Yüklenemedi</div>
-                        <div class="empty-state-message">${error.message}</div>
-                    </div>
-                `;
-            }
-        }
-
-        function renderTable(data) {
-            const container = document.getElementById('table-container');
-
-            if (data.length === 0) {
-                container.innerHTML = `
-                    <div class="empty-state">
-                        <div class="empty-state-icon">📁</div>
-                        <div class="empty-state-title">Henüz proje yok</div>
-                        <div class="empty-state-message">Projeler, fırsatlar "Kazanıldı" olarak işaretlendiğinde otomatik oluşturulur</div>
-                        <a href="opportunities.html" class="btn btn-primary" style="margin-top: var(--spacing-md);">
-                            Fırsatlara Git
-                        </a>
-                    </div>
-                `;
-                return;
-            }
-
-            container.innerHTML = `
-                <table class="data-table">
-                    <thead>
-                        <tr>
-                            <th>Proje Kodu</th>
-                            <th>Proje Adı</th>
-                            <th>Müşteri</th>
-                            <th>Sözleşme Tutarı</th>
-                            <th>Durum</th>
-                            <th style="text-align: right;">İşlemler</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        ${data.map(project => `
-                            <tr>
-                                <td><strong>${project.project_code}</strong></td>
-                                <td>${project.title}</td>
-                                <td>${project.customer_name || '-'}</td>
-                                <td>${project.contract_amount ? Utils.formatCurrency(project.contract_amount, project.currency) : '-'}</td>
-                                <td>
-                                    <span class="status-badge ${statusColors[project.status] || 'info'}">
-                                        ${statusLabels[project.status] || project.status}
-                                    </span>
-                                </td>
-                                <td style="text-align: right;">
-                                    <button class="btn btn-ghost btn-sm" onclick="viewProject(${project.id})">Görüntüle</button>
-                                    <button class="btn btn-outline btn-sm" onclick="changeStatus(${project.id})">Durum</button>
-                                </td>
-                            </tr>
-                        `).join('')}
-                    </tbody>
-                </table>
-            `;
-        }
-
-        function viewProject(id) {
-            const project = projects.find(p => p.id === id);
-            if (!project) return;
-
-            document.body.style.overflow = 'hidden';
-            document.getElementById('modal-container').innerHTML = `
-                <div class="modal-overlay show" onclick="closeModal(event)">
-                    <div class="modal-content" onclick="event.stopPropagation()" style="max-width: 600px;">
-                        <div class="modal-header">
-                            <h3>${project.project_code}</h3>
-                            <button class="modal-close" onclick="closeModal()">&times;</button>
-                        </div>
-                        <div class="modal-body">
-                            <h4 style="margin-bottom: var(--spacing-md);">${project.title}</h4>
-                            
-                            <div style="display: grid; grid-template-columns: repeat(2, 1fr); gap: var(--spacing-md);">
-                                <div>
-                                    <div style="font-size: var(--font-size-xs); color: var(--text-muted);">Müşteri</div>
-                                    <div style="font-weight: var(--font-weight-medium);">${project.customer_name || '-'}</div>
-                                </div>
-                                <div>
-                                    <div style="font-size: var(--font-size-xs); color: var(--text-muted);">Sözleşme Tutarı</div>
-                                    <div style="font-weight: var(--font-weight-medium);">${project.contract_amount ? Utils.formatCurrency(project.contract_amount, project.currency) : '-'}</div>
-                                </div>
-                                <div>
-                                    <div style="font-size: var(--font-size-xs); color: var(--text-muted);">Durum</div>
-                                    <span class="status-badge ${statusColors[project.status]}">
-                                        ${statusLabels[project.status]}
-                                    </span>
-                                </div>
-                                <div>
-                                    <div style="font-size: var(--font-size-xs); color: var(--text-muted);">Başlangıç</div>
-                                    <div>${project.start_date ? Utils.formatDate(project.start_date) : '-'}</div>
-                                </div>
-                            </div>
-
-                            <div style="margin-top: var(--spacing-lg);">
-                                <div style="font-size: var(--font-size-xs); color: var(--text-muted); margin-bottom: var(--spacing-sm);">Proje İlerlemesi</div>
-                                <div style="display: flex; gap: 2px;">
-                                    ${statusOrder.slice(1).map((status, idx) => `
-                                        <div style="flex: 1; height: 8px; border-radius: 4px; background: ${statusOrder.indexOf(project.status) >= idx + 1 ? 'var(--success)' : 'var(--gray-200)'}"></div>
-                                    `).join('')}
-                                </div>
-                            </div>
-
-                            ${project.description ? `
-                                <div style="margin-top: var(--spacing-lg);">
-                                    <div style="font-size: var(--font-size-xs); color: var(--text-muted);">Açıklama</div>
-                                    <div>${project.description}</div>
-                                </div>
-                            ` : ''}
-                        </div>
-                        <div class="modal-footer">
-                            <button class="btn btn-ghost" onclick="closeModal()">Kapat</button>
-                            <button class="btn btn-primary" onclick="closeModal(); changeStatus(${project.id});">Durum Değiştir</button>
-                        </div>
-                    </div>
-                </div>
-            `;
-        }
-
-        function changeStatus(id) {
-            const project = projects.find(p => p.id === id);
-            if (!project) return;
-
-            document.body.style.overflow = 'hidden';
-            document.getElementById('modal-container').innerHTML = `
-                <div class="modal-overlay show" onclick="closeModal(event)">
-                    <div class="modal-content" onclick="event.stopPropagation()" style="max-width: 400px;">
-                        <div class="modal-header">
-                            <h3>Durum Değiştir</h3>
-                            <button class="modal-close" onclick="closeModal()">&times;</button>
-                        </div>
-                        <form onsubmit="updateStatus(event, ${id})">
-                            <div class="modal-body">
-                                <p style="margin-bottom: var(--spacing-md);"><strong>${project.project_code}</strong></p>
-                                <div class="form-group">
-                                    <label class="form-label">Yeni Durum</label>
-                                    <select class="form-select" name="status" required>
-                                        ${statusOrder.slice(1).map(status =>
-                `<option value="${status}" ${project.status === status ? 'selected' : ''}>${statusLabels[status]}</option>`
-            ).join('')}
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-ghost" onclick="closeModal()">İptal</button>
-                                <button type="submit" class="btn btn-primary">Güncelle</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            `;
-        }
-
-        function closeModal(event) {
-            if (event && event.target !== event.currentTarget) return;
-            document.getElementById('modal-container').innerHTML = '';
-            document.body.style.overflow = '';
-        }
-
-        async function updateStatus(event, id) {
-            event.preventDefault();
-            const form = event.target;
-            const status = form.status.value;
-
-            try {
-                await API.put(`/projects/${id}/status`, { status });
-                closeModal();
-                alert('Proje durumu güncellendi');
-                loadProjects();
-            } catch (error) {
-                alert(error.message || 'Bir hata oluştu');
-            }
-        }
-
-        // Enter key search
-        document.getElementById('search-input').addEventListener('keypress', function (e) {
-            if (e.key === 'Enter') loadProjects();
-        });
-    </script>
+    <!-- ES Module Script -->
+    <script type="module" src="../js/pages/projects.js"></script>
 </body>
 
 </html>
